# fastapi-docker-boilerplate

./: cookiecutter.json  docker-compose.yml  pyproject.toml  readme.md
app/: main.py
app/api/: __init__.py
app/api/example/: example.py
app/config/: __init__.py
app/config/components/: base.py
app/db/: startup.py
app/server/: server.py
docker/: Dockerfile
tests/: conftest.py
tests/server/: test_server.py
{{cookiecutter.project_name}}/: .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  CLAUDE.md  Makefile  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  readme.md
{{cookiecutter.project_name}}/.claude/: settings.json
{{cookiecutter.project_name}}/.claude/skills/code-quality-gate/: SKILL.md
{{cookiecutter.project_name}}/.claude/skills/secret-scanner/: SKILL.md
{{cookiecutter.project_name}}/.claude/skills/strict-python-mode/: SKILL.md
{{cookiecutter.project_name}}/app/: main.py
{{cookiecutter.project_name}}/app/api/: __init__.py
{{cookiecutter.project_name}}/app/api/example/: example.py
{{cookiecutter.project_name}}/app/config/: __init__.py  constants.py
{{cookiecutter.project_name}}/app/config/components/: __init__.py  base.py  db.py  redis.py
{{cookiecutter.project_name}}/app/config/envs/: development.py  production.py
{{cookiecutter.project_name}}/app/db/: startup.py
{{cookiecutter.project_name}}/app/db/migrations/server/: 1_20230130225609_None.py
{{cookiecutter.project_name}}/app/db/models/: __init__.py  sample_model.py
{{cookiecutter.project_name}}/app/locales/: messages.pot  pydantic_messages.pot
{{cookiecutter.project_name}}/app/locales/en/LC_MESSAGES/: messages.mo  messages.po
{{cookiecutter.project_name}}/app/locales/ru/LC_MESSAGES/: messages.mo  messages.po
{{cookiecutter.project_name}}/app/server/: server.py
{{cookiecutter.project_name}}/app/server/utils/: exception_handler.py
{{cookiecutter.project_name}}/docker/: Dockerfile
{{cookiecutter.project_name}}/tests/: conftest.py  utils.py
{{cookiecutter.project_name}}/tests/server/: conftest.py  test_server.py
{{cookiecutter.project_name}}/tests/test_server/: conftest.py  test_server.py
