[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Fastapi boilerplate"
authors = ["Nikolay Pavlin <afaneor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
django-split-settings = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
